--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,6 @@
-application: crockersrules-hrd
-version: 1
-runtime: python
-api_version: 1
+runtime: python27
+threadsafe: false
+
 
 handlers:
 - url: /_ah/queue/deferred
@@ -29,6 +28,10 @@ handlers:
 
 - url: .*
   script: main.py
+
+libraries:
+- name: django
+  version: "1.2"
 
 skip_files: |
  ^(.*/)?(
