--- a/app.yaml
+++ b/app.yaml
@@ -7,16 +7,19 @@ env_variables:
   OAUTH_CLIENT_SECRET_NAME: "my-client-secret"
   DJANGO_SECRET_KEY_NAME: "django-secret-key"
   SENDGRID_API_KEY_NAME: "sendgrid-api-key"
-  
+
 handlers:
-- url: /static
-  static_dir: static
-  expiration: "30d"
+  - url: /static
+    static_dir: static
+    expiration: "30d"
+    secure: always
 
-- url: /favicon.ico
-  static_files: static/images/favicon.ico
-  upload: static/images/favicon.ico
+  - url: /favicon.ico
+    static_files: static/images/favicon.ico
+    upload: static/images/favicon.ico
+    secure: always
 
-- url: /robots.txt
-  static_files: static/robots.txt
-  upload: static/robots.txt
+  - url: /robots.txt
+    static_files: static/robots.txt
+    upload: static/robots.txt
+    secure: always
